Revision history for Bible::OBML::Gateway

{{$NEXT}}

1.10      2020-07-20 10:04:37-07:00 America/Los_Angeles
        - Fix to handle UTF-8 on save() and load() operations

1.09      2020-07-17 17:00:09-07:00 America/Los_Angeles
        - Significant parsing improvements

1.08      2020-07-16 13:02:30-07:00 America/Los_Angeles
        - Additional parsing improvements

1.07      2020-07-15 17:59:11-07:00 America/Los_Angeles
        - Update parsing to match Gateway site

1.06      2020-07-10 12:25:04-07:00 America/Los_Angeles
        - Fix to remove extraneous markup during parsing

1.05      2020-07-09 17:22:23-07:00 America/Los_Angeles
        - Fix for red letter (WoJ) text spanning a footnote or crossreference

1.04      2020-07-09 09:14:27-07:00 America/Los_Angeles
        - Remove Moose dependency; replace with exact and exact::class
        - Update documentation
        - Update Travis YAML

1.03      2019-01-12 17:20:51-08:00 America/Los_Angeles
        - Patch from dmachine to fix NIV 1 John 2 and Matt 3 parse failures

1.02      2018-01-04 18:51:59-08:00 America/Los_Angeles
        - Minor doc patch (because I'm tired and didn't get it right the first time)

1.01      2018-01-04 18:48:07-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world.