@@ -1,8 +1,8 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.015.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
 use strict;
 use warnings;
 
-use 5.016;
+use 5.020;
 
 use ExtUtils::MakeMaker;
 
@@ -14,11 +14,11 @@ my %WriteMakefileArgs = (
   },
   "DISTNAME" => "Bible-OBML-Gateway",
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.016",
+  "MIN_PERL_VERSION" => "5.020",
   "NAME" => "Bible::OBML::Gateway",
   "PREREQ_PM" => {
     "Bible::OBML" => "1.14",
-    "Bible::Reference" => "1.04",
+    "Bible::Reference" => "1.05",
     "Mojo::DOM" => 0,
     "Mojo::File" => 0,
     "Mojo::URL" => 0,
@@ -37,7 +37,7 @@ my %WriteMakefileArgs = (
     "strict" => 0,
     "warnings" => 0
   },
-  "VERSION" => "1.10",
+  "VERSION" => "1.11",
   "test" => {
     "TESTS" => "t/*.t t/Bible/OBML/*.t"
   }
@@ -46,7 +46,7 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Bible::OBML" => "1.14",
-  "Bible::Reference" => "1.04",
+  "Bible::Reference" => "1.05",
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
