@@ -1,6 +1,8 @@
 Revision history for Bible::OBML::Gateway
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.10      2020-07-20 10:04:37-07:00 America/Los_Angeles
         - Fix to handle UTF-8 on save() and load() operations
